[metadata]
name = mm_job_proc
version = 0.0.1

[options]
packages = mm
install_requires =
    SQLAlchemy>=1.4.0
    fastapi
    typing-extensions>=3.10;python_version<'3.9'

[options.extras_require]
dev =
    pre-commit
    sqlalchemy-stubs
    tox

[tox:tox]

envlist = lint, py{39,38,37}
skipsdist = true
skip_missing_interpreters = true

[testenv]

commands =
    pytest --cov=mm {posargs}
deps =
    .
    pytest-cov
    pytest-gitignore
    requests
passenv =
    PYTHONBREAKPOINT
setenv =
    PYTHONWARNINGS = once

[testenv:lint]

commands =
    pre-commit run --all-files --show-diff-on-failure
    mypy --config-file={toxinidir}/.mypy.ini .
deps =
    .[dev]
    mypy
    pre-commit
setenv =
    PYTHONWARNINGS = ignore

[testenv:run]

commands =
    uvicorn mm.app:app {posargs}
deps =
    .
    uvicorn
setenv =
    PYTHONWARNINGS = ignore

[flake8]

# See:
# * <https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes>
# * <https://flake8.readthedocs.io/en/latest/user/error-codes.html>
ignore =
  E501,  # line too long (... > ... characters)
  W503,  # line break occurred before a binary operator

[tool:pytest]

addopts = --doctest-continue-on-failure --doctest-glob='*.md' --doctest-modules
doctest_optionflags = ELLIPSIS IGNORE_EXCEPTION_DETAIL NORMALIZE_WHITESPACE NUMBER
